# Acui

./: AGENTS.md  Cargo.toml  plan.md
benches/: thread_performance.rs
scripts/: profile_non_headless.sh
src/: client.rs  config.rs  domain.rs  lib.rs  main.rs  persistence.rs  state.rs
src/client/: mock.rs
src/ui/: chat.rs  layout.rs  mod.rs  plan_sidebar.rs  sidebar.rs
src/ui/chat/: support.rs
tests/: chat_ui_regressions.rs  e2e_startup.rs  mock_agent_integration.rs  multi_workspace_interactions.rs  sidebar_menu_regressions.rs
