[package]
name = "acui"
version = "0.1.0"
edition = "2024"
description = "GPUI-based multi-agent session controller using the Agent-Client Protocol"

[package.metadata.bundle]
name = "acui"
identifier = "com.acui.app"
icon = ["assets/acui.icns"]


[dependencies]
# UI Framework
gpui = { version = "0.2.2", features = ["runtime_shaders", "test-support"] }
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"
gpui-terminal = "=0.1.0"

# Async & Concurrency
tokio = { version = "1.49", features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "time",
  "process",
  "io-util",
  "io-std",
] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
async-trait = "0.1"

# Networking & Protocol (Agent-Client Protocol)
agent-client-protocol = { version = "0.9.5", features = ["unstable"] }

# Data & Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ignore = "0.4"
directories = "5.0"
similar = "2.6"

# Error Handling & Logging
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"

[dev-dependencies]
gpui = { version = "0.2.2", features = ["runtime_shaders", "test-support"] }
criterion = "0.5"

[[bench]]
name = "thread_performance"
harness = false
